# test-oscareo

./: .gitignore  README.md
dag/: pypy_load_15_days.py  pypy_load_today.py
data/: 20250305_part000000000000.json  20250312_part000000000000.json
docs/: looker-studio-dashbord.txt
sources/: Dockerfile  config.json  load_pypi_current_day.sql  load_pypi_last_15_days.sql  main.py  pyproject.toml
sources/sql/: load_pypi_current_day.sql  load_pypi_last_15_days.sql
terraform/: main.tf  variables.tf
terraform/config/: backend-config-dev.hcl  backend-config-prod.hcl
terraform/modules/bigquery/: main.tf  variables.tf
terraform/modules/bigquery/schema/: schema_pypi_download_15days.json
terraform/modules/bigquery/views/: all_download_details.sql  country_last_download.sql
terraform/modules/storage/: main.tf  variables.tf
