[tool.poetry]
name = "sources"
version = "0.1.0"
description = "test-oscareo"
authors = ["mariogomis10 <mariogomis10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-bigquery = "^3.30.0"
google-cloud-storage = "^2.16.0" 
fastapi = "^0.115.0"
uvicorn = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

